fix: global scrollbar color

--- a/style/web/_global.less
+++ b/style/web/_global.less
@@ -9,7 +9,7 @@
 
   &::-webkit-scrollbar-thumb {
     width: 6px;
-    background: #e5e5e5;
+    background: @scrollbar-color;
     border-radius: 3px;
   }
 }
